argo-apps/echo/echo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
