argo-apps/echo/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /ingress
            pathType: Prefix
            backend:
              service:
                name: echoserver
                port:
                  number: 80
